--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,16 +4,16 @@ main:
     url: /
   - title: "Call for Papers"
     url: call_for_papers
-  #- title: "Accepted Papers"
-  #  url: accepted_papers
+  - title: "Accepted Papers"
+    url: accepted_papers
   - title: "Schedule"
     url: schedule
+  - title: "Keynote Speakers"
+    url: keynotes
   - title: "Organization"
     url: organizers
   - title: "Program Committee"
     url: program_committee
-  - title: "Accepted Papers"
-    url: accepted_papers
 
   # - title: "Sitemap"
   #   url: /sitemap/
